--- a/src/shared/app.global.css
+++ b/src/shared/app.global.css
@@ -1,7 +1,6 @@
 @import "~normalize.css";
-
+@import "./fonts/fonts.css";
 .body {
   height: 100vh;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Inter";
 }
