--- a/src/shared/components/Project/Project.css
+++ b/src/shared/components/Project/Project.css
@@ -1,18 +1,22 @@
 .container {
   display: flex;
   width: 100%;
+  box-sizing: border-box;
 }
 .container__left {
   box-sizing: border-box;
   padding: 0 20px 0;
   max-width: 20%;
   width: 100%;
+
   margin: 0;
 }
 .title {
   margin: 0;
   padding-top: 100px;
   font-size: 32px;
+  max-width: 100%;
+  width: 100%;
 }
 .price {
   margin: 0;
@@ -29,10 +33,10 @@
 }
 .button {
   height: calc(100vh - 80px);
-  width: 100px;
+  width: 70px;
   z-index: 1;
 }
-.direction {
+.direction_left {
   height: 100px;
   width: 100px;
   z-index: 10;
