--- a/src/shared/components/Header/Header.css
+++ b/src/shared/components/Header/Header.css
@@ -1,8 +1,8 @@
 .nav {
   display: flex;
   height: 80px;
-  background-color: rgb(122, 122, 122);
-  max-width: 1920px;
+  background-color: rgb(0, 0, 0);
+  max-width: 100vw;
   width: 100%;
   text-align: center;
   box-sizing: border-box;
@@ -11,14 +11,15 @@
   max-width: 1280px;
   width: 100%;
   gap: 200px;
-  margin: 0 auto;
+  /*   margin: 0 auto; */
   display: flex;
 }
 .title {
-  font-size: 40px;
   margin: 0;
-  padding-top: 20px;
+  padding: 8px 0 0 50px;
   font-weight: 600;
+  color: #f0f8ff;
+  font-style: italic;
 }
 .link__row {
   max-width: 400px;
@@ -27,18 +28,17 @@
   justify-content: space-between;
 }
 .link {
-  color: rgb(0, 0, 0);
+  color: aliceblue;
   font-size: 30px;
   margin: 0;
   padding-top: 25px;
   text-decoration: none;
 }
 .active_link {
-  color: rgb(255, 255, 255);
+  color: rgb(160, 174, 205);
   font-size: 30px;
   margin: 0;
   padding-top: 25px;
-  text-decoration: none;
 }
 .link:hover {
   text-decoration: underline;
