--- a/src/shared/components/MainLeft/MainLeft.css
+++ b/src/shared/components/MainLeft/MainLeft.css
@@ -3,7 +3,7 @@
   max-width: 20%;
   width: 100%;
   height: calc(100vh - 80px);
-  border-right: 3px solid rgb(122, 122, 122);
+  border-right: 3px solid rgb(0, 0, 0);
   margin: 0;
 }
 .title {
@@ -14,6 +14,7 @@
 .text {
   margin: 0;
   padding: 40px 20px 0;
+  line-height: 24px;
 }
 .contacts {
   position: absolute;
