--- a/src/shared/components/MainRight/MainRight.css
+++ b/src/shared/components/MainRight/MainRight.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding-top: 15px;
   text-align: center;
-  border-bottom: 3px solid rgb(122, 122, 122);
+  border-bottom: 3px solid rgb(0, 0, 0);
   font-size: 33px;
   font-weight: 700;
 }
@@ -31,11 +31,11 @@
 }
 
 .lists::-webkit-scrollbar-track {
-  background: #2f2f37;
+  background: #000000;
 }
 
 .lists::-webkit-scrollbar-thumb {
-  background: #ffffff;
-  border: 4px solid #2f2f37;
+  background: rgb(160, 174, 205);
+  border: 4px solid #494949;
   border-radius: 6px;
 }
