--- a/src/shared/components/Project/Project.css
+++ b/src/shared/components/Project/Project.css
@@ -30,14 +30,24 @@
   margin: 0;
   padding-top: 80px;
   max-width: 300px;
+  line-height: 24px;
 }
 .button {
   height: calc(100vh - 80px);
   width: 70px;
-  z-index: 1;
+  border: none;
+  background-color: rgb(160, 174, 205);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-.direction_left {
-  height: 100px;
-  width: 100px;
-  z-index: 10;
+.button:hover {
+  background-color: rgb(144, 156, 182);
+}
+.direction {
+  height: 60px;
+  width: 60px;
 }
