--- a/src/shared/components/MainRight/MainRight.css
+++ b/src/shared/components/MainRight/MainRight.css
@@ -18,6 +18,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-rows: 300px;
+  gap: 30px 33px;
   flex-wrap: wrap;
   max-height: calc(100vh - 150px);
   height: 100%;
