--- a/frontend/src/components/ProjectSlider/Swipers.global.css
+++ b/frontend/src/components/ProjectSlider/Swipers.global.css
@@ -9,10 +9,8 @@
 }
 
 .container_bottom {
-  position: relative;
-  max-width: calc(80vw - 140px);
   width: 100%;
-  height: calc(100vh - 20% - 80px);
+  height: calc(100vh - 10% - 80px);
   box-sizing: border-box;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -21,35 +19,22 @@
   user-select: none;
 }
 
-.swiper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background-color: rgb(160, 174, 205);
 
   /* Center slide text vertically */
+}
+.swiperrrr {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  align-items: end;
 }
 
 .swiper {
   width: 100%;
   height: 300px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .swiper-slide {
@@ -65,7 +50,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  /*   transform: translateY(200px); */
+  transform: translateY(35px);
 }
 
 .mySwiper {
