fix: обновление страниц с авторизацией - не доделано

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -5,12 +5,13 @@
   max-width: 100vw;
   width: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .conteiner {
   width: 100%;
-
   display: flex;
 }
+
 .title {
   width: 20%;
   margin: 0;
@@ -18,6 +19,11 @@
   font-weight: 600;
   font-style: italic;
 }
+/* .trait {
+  border-left: 3px solid rgb(216, 220, 223);
+  transform: skew(-20deg, -10deg) translateX(12px);
+  height: 82px;
+} */
 .link__row {
   width: 80%;
   display: flex;
@@ -30,20 +36,27 @@
   margin: 0;
   padding-top: 25px;
   text-decoration: none;
+
+  border-left: 3px solid rgb(216, 220, 223);
+  transform: skewX(-10deg) translateX(12px);
+  transform-origin: 0 0;
 }
 .active_link {
   width: 50%;
   text-align: center;
   font-size: 30px;
-  color: rgb(184, 217, 241);
   margin: 0;
   padding-top: 25px;
   text-decoration: none;
-  border: 2px solid rgb(184, 217, 241);
+  background-color: rgb(128, 128, 128);
+  color: rgb(216, 220, 223);
+  border-left: 3px solid rgb(216, 220, 223);
+
+  transform: skewX(-10deg) translateX(12px);
+  transform-origin: 0 0;
 }
 .link:hover {
-  box-shadow: 3px 3px 3px rgb(0, 255, 255), -3px 3px 3px rgb(0, 255, 255);
-  z-index: 2;
+  background-color: rgb(128, 128, 128);
 }
 .logo {
   width: 100%;
