--- a/frontend/src/components/ProjectSlider/Swipers.global.css
+++ b/frontend/src/components/ProjectSlider/Swipers.global.css
@@ -23,8 +23,6 @@
   text-align: center;
   font-size: 18px;
   background-color: rgb(160, 174, 205);
-
-  /* Center slide text vertically */
 }
 .swiperrrr {
   display: flex;
@@ -32,9 +30,11 @@
   align-items: end;
 }
 
-.swiperrrrVideo {
+.swiper_iframe {
   width: 100%;
   height: 100%;
+  border: none;
+  pointer-events: none;
 }
 .swiper {
   width: 100%;
@@ -91,5 +91,9 @@
   cursor: pointer;
 }
 .link {
+  position: relative;
+  display: block;
   width: 100%;
+
+  height: 100%;
 }
