--- a/frontend/src/components/Modal/Modal.module.css
+++ b/frontend/src/components/Modal/Modal.module.css
@@ -3,7 +3,9 @@
   left: 50%;
   top: 45%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  max-width: 80%;
+  width: 100%;
+  height: 730px;
   border-radius: 30px;
   z-index: 3;
   background-color: rgb(80, 80, 80);
@@ -15,7 +17,8 @@
   animation: fadeIn 0.1s linear;
 }
 .modal__image {
-  width: 100%;
+  width: calc(100% - 110px);
+  height: 100%;
 }
 .modal.hidden {
   animation: fadeOut 0.1s linear;
@@ -27,8 +30,8 @@
   position: absolute;
   background-color: rgb(0, 0, 0, 0);
   border: none;
-  top: 45px;
-  right: 45px;
+  top: -25px;
+  right: -45px;
   cursor: pointer;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -41,6 +44,35 @@
   height: 30px;
 }
 .iframe {
-  width: 1450px;
-  height: 800px;
+  width: 100%;
+
+  /*   transform: translateY(2px); */
+}
+.container {
+  display: flex;
+  height: 100%;
+}
+.button {
+  width: 55px;
+  border: none;
+  background-color: rgb(160, 174, 205);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.button:first-child {
+  border-radius: 30px 0 0 30px;
+}
+.button:last-child {
+  border-radius: 0 30px 30px 0;
+}
+.button:hover {
+  background-color: rgb(144, 156, 182);
+}
+.direction {
+  height: 60px;
+  width: 60px;
 }
