--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,5 @@
+@import "@/fonts/fonts.css";
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,4 +13,5 @@ body {
   height: 100vh;
   background-color: rgb(160, 174, 205);
   color: rgb(0, 0, 0);
+  font-family: "Inter";
 }
