--- a/frontend/src/components/Product/Product.module.css
+++ b/frontend/src/components/Product/Product.module.css
@@ -1,6 +1,7 @@
 .list {
   list-style-type: none;
   transition: all 0.5s ease;
+  width: 100%;
 }
 .link {
   text-decoration: none;
@@ -8,7 +9,7 @@
 .image {
   padding-top: 40px;
   width: 100%;
-  height: auto;
+  height: 70%;
 }
 .description {
   max-width: 100%;
@@ -17,5 +18,10 @@
 }
 .list:hover {
   background-color: rgba(0, 0, 0, 0.2);
-  transform: scale(1.2);
+  transform: scale(1.199);
+}
+@media (max-width: 1680px) {
+  .list:hover {
+    transform: scale(1.16);
+  }
 }
