--- a/frontend/src/components/ProjectFeed/ProjectFeed.global.css
+++ b/frontend/src/components/ProjectFeed/ProjectFeed.global.css
@@ -3,32 +3,48 @@
   height: 10%;
   position: relative;
 }
-.mySwiper1 .swiper {
-  width: 100%;
-  height: 35%;
-}
 
-.mySwiper1 .swiper-slide {
+.mySwiper0 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background-color: rgb(160, 174, 205);
-  height: 35%;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.mySwiper1 .swiper-slide img {
+.mySwiper0 .swiper-slide img {
   display: block;
-  width: 100%;
+  width: 90%;
   height: 100%;
   object-fit: cover;
 }
-.mySwiper1 {
-  height: 30%;
+
+.mySwiper0 {
   box-sizing: border-box;
   flex-wrap: nowrap;
   position: absolute;
   top: 0;
   left: 0;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.mySwiper0 .link {
+  text-decoration: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.mySwiper0 .active_link {
+  text-decoration: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgb(0, 0, 0);
+  height: 99%;
+  border-radius: 10px;
 }
