--- a/frontend/src/components/ProjectSlider/Swipers.global.css
+++ b/frontend/src/components/ProjectSlider/Swipers.global.css
@@ -19,10 +19,72 @@
   user-select: none;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background-color: rgb(160, 174, 205);
+.mySwiper2 .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.mySwiper2 .swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper1 .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+  display: flex;
+  align-items: center;
+}
+
+.mySwiper1 .swiper-slide-thumb-active {
+  opacity: 1;
+  border: none;
+}
+.mySwiper2 .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.mySwiper1 .swiper-slide img {
+  display: block;
+
+  height: 85%;
+  object-fit: cover;
+}
+
+.link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.mySwiper2 {
+  height: 70%;
+  width: 60%;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  transform: translateY(35px);
+}
+
+.mySwiper1 {
+  width: 100%;
+  height: 20%;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+}
+.mySwiper1:hover {
+  cursor: pointer;
+}
+.mySwiper1 .slide_image {
+  height: 150px;
+  cursor: pointer;
 }
 .swiperrrr {
   display: flex;
@@ -36,64 +98,7 @@
   border: none;
   pointer-events: none;
 }
-.swiper {
+.gif {
   width: 100%;
-  height: 300px;
-}
-
-.swiper-slide {
-  background-size: cover;
-  background-position: center;
-}
-
-.mySwiper2 {
-  height: 60%;
-  width: 60%;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  transform: translateY(35px);
-}
-
-.mySwiper {
-  width: 100%;
-  height: 30%;
-  box-sizing: border-box;
-  flex-wrap: nowrap;
-  position: absolute;
-  bottom: 0;
-}
-.mySwiper:hover {
-  cursor: pointer;
-}
-
-.mySwiper .swiper-slide {
-  width: 25%;
-  height: 100%;
-  opacity: 0.4;
-}
-
-.mySwiper .swiper-slide-thumb-active {
-  opacity: 1;
-  border: none;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.slide_image {
-  width: 100%;
-  cursor: pointer;
-}
-.link {
-  position: relative;
-  display: block;
-  width: 100%;
-
   height: 100%;
 }
