--- a/frontend/src/components/ProjectAddition/ProjectAddition.module.css
+++ b/frontend/src/components/ProjectAddition/ProjectAddition.module.css
@@ -3,6 +3,11 @@
   height: 70%;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 30px;
+  margin: 100px auto 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 .form {
   display: flex;
@@ -15,4 +20,30 @@
 .inputs {
   display: flex;
   flex-direction: column;
+}
+.button {
+  background-color: rgb(138, 149, 173);
+  border: 2px solid black;
+  height: 40px;
+  cursor: pointer;
+}
+.button_exit {
+  width: 200px;
+  height: 80px;
+  font-size: 20px;
+  background-color: rgb(160, 174, 205);
+  border: 2px solid black;
+  cursor: pointer;
+  border-radius: 8px;
+}
+.button_exit:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.office {
+  position: absolute;
+  top: 45%;
+  left: 36%;
+  font-size: 72px;
+  color: red;
+  transform: rotate(-15deg);
 }
