feat: форма отправки нового проекта

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   overflow: hidden;
 }
-.conteiner {
+.container {
   width: 100%;
   display: flex;
   position: relative;
