--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,6 +10,8 @@ body {
   scroll-behavior: smooth;
 }
 .body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   background-color: rgb(160, 174, 205);
   color: rgb(0, 0, 0);
