--- a/frontend/src/components/ProjectSlider/Swipers.global.css
+++ b/frontend/src/components/ProjectSlider/Swipers.global.css
@@ -10,7 +10,7 @@
 
 .container_bottom {
   width: 100%;
-  height: calc(100vh - 10% - 80px);
+  height: calc(100vh - 180px);
   box-sizing: border-box;
   -webkit-user-select: none;
   -khtml-user-select: none;
