feat: дизайн добавления файлов

--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -1,5 +1,5 @@
 .form {
-  height: calc(100% - 80px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,4 +16,6 @@
 .form__inputs {
   list-style: none;
   counter-reset: list-number;
+  display: flex;
+  flex-direction: column;
 }
