--- a/frontend/src/components/Form/Buttons/Buttons.module.css
+++ b/frontend/src/components/Form/Buttons/Buttons.module.css
@@ -9,6 +9,11 @@
   background-color: rgb(160, 174, 205);
 }
 
+.pseudo_container_button {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
 .button {
   display: block;
   width: 400px;
@@ -24,6 +29,18 @@
   background-color: rgba(0, 0, 0, 0.4);
   color: rgb(255, 255, 255);
   box-shadow: 7px 5px 5px rgb(0, 0, 0);
+}
+
+.button:disabled {
+  background-color: rgba(245, 0, 0, 0.4);
+}
+.form_error {
+  position: absolute;
+  top: -40px;
+  width: 100%;
+  text-align: center;
+  color: rgb(231, 19, 19);
+  font-size: 18px;
 }
 
 .button_exit {
