--- a/frontend/src/components/Form/FormFileInput/FormFileInput.module.css
+++ b/frontend/src/components/Form/FormFileInput/FormFileInput.module.css
@@ -1,26 +1,78 @@
-.form__item {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
-  gap: 50px;
-  overflow: hidden;
-}
-
 .form_label {
+  display: grid;
+  grid-template-columns: 1fr 368px;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  gap: 50px;
+  position: relative;
+  height: 62px;
+}
+.from_label_active {
+  background-color: rgb(152, 230, 204);
+  border-radius: 20px;
+}
+.form_text {
+  padding-top: 20px;
   font-size: 22px;
   cursor: pointer;
   min-width: 0;
+  height: 100%;
 }
 
-.form_label:not(.stopCount):before {
+.form_text::before {
   counter-increment: list-number;
   content: counter(list-number) ". ";
 }
 
-.form__input {
-  margin-bottom: 28px;
+.form_container {
   font-size: 17px;
-  cursor: pointer;
   justify-self: start;
   width: 100%;
+  height: 100%;
+  display: flex;
+  white-space: nowrap;
+}
+.form_span_active,
+.form_span {
+  display: block;
+  box-sizing: border-box;
+  padding: 0 10px 0;
+  text-align: center;
+  border: 1px solid black;
+  background-color: rgb(138, 149, 173);
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 2;
+  margin: 21px 10px 0 0;
+  height: 22px;
+}
+.form_span_active {
+  background-color: rgb(20, 199, 44);
+}
+.form_span_active:hover,
+.form_span:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 5px rgb(0, 0, 0);
+}
+.form_span_active:hover {
+  background-color: rgb(41, 110, 50);
+}
+.form__input {
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+}
+.name_file {
+  margin-top: 21px;
+  font-size: 18px;
+}
+.form_error {
+  color: rgb(231, 19, 19);
+  position: absolute;
+  transform: translateY(21px);
+  font-size: 18px;
 }
