--- a/frontend/src/components/Form/FormFileInput/FormFileInput.module.css
+++ b/frontend/src/components/Form/FormFileInput/FormFileInput.module.css
@@ -60,11 +60,11 @@
   background-color: rgb(41, 110, 50);
 }
 .form__input {
-  visibility: hidden;
   width: 0;
   height: 0;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 .name_file {
   margin-top: 21px;
