--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 .container_form {
   width: 1600px;
