--- a/frontend/src/components/Form/FormTextarea/FormTextarea.module.css
+++ b/frontend/src/components/Form/FormTextarea/FormTextarea.module.css
@@ -23,14 +23,21 @@
 
 .form__input {
   margin-top: 15px;
-  height: 215px;
+  height: 160px;
   font-size: 18px;
   width: 320px;
   resize: none;
   outline: none;
   cursor: pointer;
 }
-
+.form__input:hover {
+  border: 2px solid black;
+  cursor: auto;
+}
+.form__input:focus {
+  border: 2px solid black;
+  cursor: auto;
+}
 .form_error {
   color: rgb(231, 19, 19);
   position: absolute;
