--- a/frontend/src/components/ModalMessage/ModalMessage.module.css
+++ b/frontend/src/components/ModalMessage/ModalMessage.module.css
@@ -3,7 +3,6 @@
   border: 2px solid black;
   border-radius: 6px;
   background-color: rgb(155, 175, 219);
-  margin: 0 auto;
   position: absolute;
   top: 60%;
   left: 50%;
@@ -12,9 +11,22 @@
   flex-direction: column;
   align-items: center;
 }
+
 .modal_text {
   font-size: 30px;
   padding: 40px 40px 25px;
+}
+
+.modal_text_delete {
+  font-size: 16px;
+  padding: 40px 10px 25px;
+  width: 300px;
+}
+
+.modal_container_button {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
 .modal_button {
   width: 40px;
@@ -26,6 +38,7 @@
   border: 1px solid black;
   border-radius: 4px;
 }
+
 .modal_button:hover {
   background-color: rgba(0, 0, 0, 0.4);
   color: rgb(255, 255, 255);
