--- a/frontend/src/components/MainRight/Product/Urn/Urn.module.css
+++ b/frontend/src/components/MainRight/Product/Urn/Urn.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 10px;
   right: 30px;
-  background-image: url(../../images/urn.svg);
+  background-image: url(../../../../images/urn.svg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 18px;
