--- a/frontend/src/components/Modal/Modal.module.css
+++ b/frontend/src/components/Modal/Modal.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 730px;
   border-radius: 30px;
-  z-index: 3;
+  z-index: 33;
   background-color: rgb(80, 80, 80);
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -46,6 +46,11 @@
 .iframe {
   width: 100%;
 
+  /*   transform: translateY(2px); */
+}
+.video {
+  width: calc(100% - 110px);
+  object-fit: cover;
   /*   transform: translateY(2px); */
 }
 .container {
