--- a/frontend/src/components/ModalMessage/ModalMessage.module.css
+++ b/frontend/src/components/ModalMessage/ModalMessage.module.css
@@ -1,14 +1,26 @@
+.container{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0, 0.6);
+  z-index: 34
+}
+
 .modal_container {
   display: flex;
+  width: fit-content;
   flex-direction: column;
   align-items: center;
   border: 2px solid black;
   border-radius: 6px;
   background-color: rgb(155, 175, 219);
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  z-index: 3;
+  
 }
 
 .modal_text {
