--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "@/fonts/fonts.css";
+@import '@/fonts/fonts.css';
 
 * {
   box-sizing: border-box;
@@ -13,7 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background-color: rgb(160, 174, 205);
-  color: rgb(0, 0, 0);
-  font-family: "Inter", serif;
+  background-color: rgb(127, 127, 127);
+  color: rgb(216, 220, 223);
+  font-family: 'Inter', serif;
 }
