--- a/frontend/src/components/mainLeft/mainLeft.module.css
+++ b/frontend/src/components/mainLeft/mainLeft.module.css
@@ -3,7 +3,8 @@
   max-width: 20.1%;
   width: 100%;
   height: calc(100vh - 80px);
-  border-right: 3px solid rgb(0, 0, 0);
+  border-right: 3px solid rgb(216, 220, 223);
+  background-color: rgb(0, 0, 0);
   margin: 0;
   padding: 80px 20px 0;
 }
