feat: добавлен formSelect

--- a/frontend/src/components/form/buttons/buttons.module.css
+++ b/frontend/src/components/form/buttons/buttons.module.css
@@ -7,7 +7,7 @@
 .pseudo_container {
   width: 200px;
   height: 80px;
-  background-color: rgb(160, 174, 205);
+  opacity: 0;
 }
 
 .pseudo_container_button {
