--- a/frontend/src/components/mainRight/mainRight.module.css
+++ b/frontend/src/components/mainRight/mainRight.module.css
@@ -1,8 +1,10 @@
 .container {
   width: 100%;
-  padding-top: 70px;
 }
-
+.container_top {
+  width: 100%;
+  height: 70px;
+}
 .lists {
   box-sizing: border-box;
   margin: 0;
