--- a/frontend/src/components/modalMessage/modalMessage.module.css
+++ b/frontend/src/components/modalMessage/modalMessage.module.css
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   background-color: rgb(0, 0, 0, 0.6);
-  z-index: 34
+  z-index: 34;
 }
 
 .modal_container {
@@ -31,6 +31,7 @@
   font-size: 16px;
   padding: 40px 10px 25px;
   width: 300px;
+  color: rgb(255, 255, 255);
 }
 
 .modal_container_button {
