style: изменил цвет/размер кнопок в кабинете

--- a/frontend/src/components/form/buttons/buttons.module.css
+++ b/frontend/src/components/form/buttons/buttons.module.css
@@ -28,8 +28,7 @@
 }
 
 .button:hover {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: rgb(255, 255, 255);
+  background-color: rgb(57, 216, 216);
   box-shadow: 7px 5px 5px rgb(0, 0, 0);
 }
 
@@ -59,7 +58,6 @@
 }
 
 .button_exit:hover {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: rgb(255, 255, 255);
+  background-color: rgb(57, 216, 216);
   box-shadow: 7px 5px 5px rgb(0, 0, 0);
 }
