--- a/frontend/src/components/header/header.module.css
+++ b/frontend/src/components/header/header.module.css
@@ -63,6 +63,16 @@
   color: rgb(0, 0, 0);
 }
 
+.link_text {
+  width: 100%;
+  height: 100%;
+  transform: scale(1);
+  transition: transform 0.2s ease;
+}
+.link_text:hover {
+  transform: scale(1.05);
+  transition: transform 0.2s ease;
+}
 .logo {
   width: 100%;
   height: 100%;
