feat: управление стрелками в модалке

--- a/frontend/src/components/modal/modal.module.css
+++ b/frontend/src/components/modal/modal.module.css
@@ -41,7 +41,9 @@
   -ms-user-select: none;
   user-select: none;
 }
-
+.modal__cross:hover {
+  opacity: 0.6;
+}
 .cross__image {
   width: 30px;
   height: 30px;
