feat: цвет кнопки отпраления проекта

--- a/frontend/src/components/form/buttons/buttons.module.css
+++ b/frontend/src/components/form/buttons/buttons.module.css
@@ -26,7 +26,16 @@
   border-radius: 4px;
   cursor: pointer;
 }
-
+.button_loading {
+  display: block;
+  width: 400px;
+  height: 40px;
+  font-size: 20px;
+  background-color: rgb(251, 255, 0);
+  border: 2px solid black;
+  border-radius: 4px;
+  cursor: pointer;
+}
 .button:hover {
   background-color: rgb(57, 216, 216);
   box-shadow: 7px 5px 5px rgb(0, 0, 0);
